@@ -1,3 +1,8 @@
+2021-03-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Use genMove to simplify genSwap.
+
 2021-03-18 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* src/z80/gen.c:
